# doge-shell

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  LICENSE  README.md  command-completion-schema.json  debug_test.rs  test_completion.rs  test_fg_panic.sh  test_fuzzy_completion.rs
dsh/: Cargo.toml  clippy_output.txt
dsh-builtin/: Cargo.toml
dsh-builtin/src/: abbr.rs  add_path.rs  ai_watch.rs  alias.rs  bg.rs  blocks.rs  bookmark.rs  cd.rs  chatgpt.rs  command_timing.rs  commit_ai.rs  comp_gen.rs  dashboard.rs  dmv.rs  doctor.rs  eproject.rs  eview.rs  export.rs  fg.rs  ga.rs  gco.rs  gh_notify.rs  github_client.rs  glog.rs  gpr.rs  gwt.rs  help.rs  history.rs  include.rs  jobs.rs  kill.rs  lib.rs  lisp.rs  magit.rs  markdown.rs  mcp.rs  notebook_play.rs  out.rs  procs.rs  project.rs  (+16 more)
dsh-builtin/src/chatgpt/: skills.rs  tool.rs
dsh-builtin/src/chatgpt/mcp/: mod.rs
dsh-builtin/src/chatgpt/tool/: edit.rs  execute.rs  gitignore.rs  ls.rs  mod.rs  read.rs  search.rs
dsh-builtin/src/serve/: config.rs  error.rs  handlers.rs  mod.rs  scanner.rs  server.rs  tests.rs
dsh-chatgpt/: Cargo.toml
dsh-chatgpt/src/: client.rs  lib.rs
dsh-frecency/: Cargo.toml
dsh-frecency/src/: extra_tests.rs  lib.rs  stats.rs  store.rs
dsh-types/: Cargo.toml
dsh-types/src/: command_block.rs  completion.rs  lib.rs  mcp.rs  notebook.rs  observed_output.rs  output_history.rs  project.rs  safety_policy.rs  snippet.rs  terminal.rs
dsh-wasm/: Cargo.toml
dsh-wasm/src/: lib.rs
dsh/benches/: latency.rs
dsh/completions/: ansible-playbook.json  ansible.json  apt-get.json  arch-chroot.json  arp.json  aws.json  base64.json  bat.json  bg.json  blkid.json  blockdev.json  bootctl.json  brew.json  bun.json  bzip2.json  cargo.json  cd.json  chgrp.json  chmod.json  chown.json  code.json  coredumpctl.json  cp.json  crontab.json  cryptsetup.json  curl.json  date.json  df.json  diff.json  direnv.json  dmesg.json  docker.json  dpkg.json  du.json  echo.json  env.json  eslint.json  export.json  eza.json  fallocate.json  (+160 more)
dsh/dynamic-completions/: killall.toml  pkill.toml  renice.toml
dsh/src/: ai_features.rs  argument_explainer.rs  command_suggestion.rs  command_timing.rs  completion.rs  context.rs  db.rs  direnv.rs  dirs.rs  environment.rs  error_handling_tests.rs  errors.rs  github.rs  history.rs  history_import.rs  input.rs  lib.rs  main.rs  notebook.rs  output_history.rs  parser.rs  perf_probes.rs  process.rs  process_tests.rs  prompt.rs  proxy.rs  repl.rs  secrets.rs  shell.pest  shell.rs  snippet.rs  string_optimization.rs  suggestion.rs
dsh/src/ai_features/: analysis.rs  command.rs  directory.rs  mod.rs  service.rs  suggestion.rs  tests.rs  ui.rs
dsh/src/builtin/: cd.rs  history.rs  jobs.rs  lisp.rs  mod.rs  read.rs  set.rs  var.rs  z.rs
dsh/src/command_palette/: mod.rs
dsh/src/command_palette/actions/: builtin_command.rs  clear_screen.rs  dashboard.rs  docker_containers.rs  find_file.rs  git_add.rs  git_checkout.rs  git_commit.rs  git_diff.rs  git_log.rs  git_push_pull.rs  git_stash.rs  jump_directory.rs  kill_process.rs  lisp_action.rs  mod.rs  port_check.rs  project_cockpit.rs  reload_config.rs  run_script.rs  search_history.rs  show_env.rs  ssh_connect.rs
dsh/src/command_palette/actions/ai/: describe_dir.rs  diagnose.rs  explain.rs  (+4 more)
dsh/src/completion/: cache.rs  command.rs  commands.rs  context.rs  display.rs  dynamic.rs  errors.rs  extra_tests.rs  floating.rs  framework.rs  fuzzy.rs  generator.rs  history.rs  integrated.rs  json_loader.rs  parser.rs  path.rs  selection.rs  shell_path.rs  shell_token.rs  skim_adapter.rs  subprocess.rs  ui.rs  wrapped_tests.rs  z_tests.rs
dsh/src/completion/dynamic/: config.rs  config_loader.rs  dev.rs  git.rs  kill.rs  mod.rs  pacman.rs  sudo.rs
dsh/src/completion/extra_tests/: new_completions.rs
dsh/src/completion/generators/: argument.rs  command.rs  filesystem.rs  group.rs  interface.rs  mod.rs  option.rs  process.rs  script.rs  signal.rs  subcommand.rs  system.rs  user.rs
dsh/src/environment/: mcp.rs  mod.rs  paths.rs  preferences.rs  tests.rs  variables.rs
dsh/src/frecency/: mod.rs  stats.rs
dsh/src/history/: command_history.rs  context.rs  entry.rs  frecency_history.rs  mod.rs  tests.rs
dsh/src/input/: config.rs  editor.rs  mod.rs  utils.rs
dsh/src/lisp/: builtin.rs  command_palette.rs  default_environment.rs  interpreter.rs  interpreter_optimized.rs  interpreter_tests.rs  macros.rs  mcp_tests.rs  mod.rs  parser.rs  stdlib_tests.rs  utils.rs
dsh/src/lisp/model/: env.rs  lambda.rs  list.rs  mod.rs  runtime_error.rs  table.rs  value.rs
dsh/src/lisp/stdlib/: core.rs  io.rs  list.rs  math.rs  mcp.rs  mod.rs  string.rs  table.rs
dsh/src/parser/: ast.rs  check.rs  edge_case_tests.rs  expansion.rs  highlight.rs  mod.rs  tests.rs  tests_escape.rs
dsh/src/process/: async_io.rs  builtin.rs  fork.rs  io.rs  job.rs  job_process.rs  job_pty.rs  job_wait.rs  mod.rs  process.rs  pty.rs  redirect.rs  signal.rs  state.rs  wait.rs
dsh/src/prompt/: context.rs  mod.rs  modules.rs  tests.rs
dsh/src/prompt/modules/: aws.rs  directory.rs  docker.rs  execution_time.rs  exit_status.rs  git.rs  go.rs  kubernetes.rs  nodejs.rs  python.rs  rust.rs  time.rs
dsh/src/proxy/: external.rs  mod.rs
dsh/src/proxy/builtin/: exit.rs  history.rs  jobs.rs  lisp.rs  mod.rs  registry.rs  reload.rs  var.rs  z.rs
dsh/src/repl/: ai_watch.rs  cache.rs  completion.rs  confirmation.rs  handler.rs  input_analysis.rs  key_action.rs  macro_utils.rs  mod.rs  render.rs  repl_ai.rs  state.rs  state_tests.rs  suggestion_manager.rs
dsh/src/repl/completion/: completion_tests.rs
dsh/src/repl/key_handlers/: ai.rs  auxiliary.rs  completion.rs  editing.rs  execution.rs  mod.rs  mouse.rs  navigation.rs
dsh/src/safety/: mod.rs
dsh/src/shell/: eval.rs  hooks.rs  job.rs  mod.rs  parse.rs  terminal.rs
dsh/src/terminal/: mod.rs  renderer.rs  title.rs
dsh/src/utils/: editor.rs  mod.rs  skim.rs
dsh/tests/: brace_expansion_test.rs  context_switching.rs  export.rs  logical_ops.rs  new_completions.rs  redirection.rs  smart_pipe.rs  special_pipes.rs  stability_tests.rs
(+274 files in other folders)
