[workspace.package]
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
description = "The simple shell"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"
version = "0.0.1"

[workspace]
resolver = "2"
members = [
  "dsh",
  "dsh-frecency",
  "dsh-wasm",
  "dsh-types",
  "dsh-builtin",
  "dsh-chatgpt",
]

[workspace.dependencies]
anyhow = "1"
libc = "0.2"
nix = "0.26"
xdg = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = {version = "0", features = ["event-stream"]}
bincode = "1"
shellexpand = "3"
once_cell = "1"
dirs = "5"
futures = "0.3"
futures-timer = "3"
async-std = "1.12"
xid = "1"