[workspace.package]
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
description = "The simple shell"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2024"
version = "0.0.1"

[workspace]
resolver = "2"
members = [
  "dsh",
  "dsh-frecency",
  "dsh-wasm",
  "dsh-types",
  "dsh-builtin",
  "dsh-chatgpt",
]

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2"
libc = "0.2"
nix = { version = "0.26", features = ["signal"] }
xdg = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = {version = "0.29", features = ["event-stream"] }
bincode = "1"
shellexpand = "3"
once_cell = "1"
dirs = "5"
futures = "0.3"
futures-timer = "3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "net", "time", "process", "signal"] }
xid = "1"
wasmer = "3.1.1"
wasmer-compiler-cranelift = "3.1.1"
wasmer-wasi = "3.1.1"
parking_lot = "0.12.4"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
wasm-bindgen = "0.2.100"

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0
debug = 0

[profile.release]
lto = true
codegen-units = 1
#panic = "abort"
