[workspace.package]
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
description = "The simple shell"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2024"
version = "0.0.1"

[workspace]
resolver = "2"
members = [
  "dsh",
  "dsh-frecency",
  "dsh-types",
  "dsh-builtin",
  "dsh-openai",
]

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2"
libc = "0.2"
nix = { version = "0.26", features = ["signal", "fs", "term", "ioctl", "process"] }
console = "0.16"
xdg = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = {version = "0.29", features = ["event-stream"] }
shellexpand = "3"
once_cell = "1"
dirs = "5"
futures = "0.3"
futures-timer = "3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "net", "time", "process", "signal"] }
xid = "1"
parking_lot = "0.12.4"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tabled = "0.20"
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
skim = "0.20"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sysinfo = "0.33"

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0
debug = 0

[profile.release]
lto = true
codegen-units = 1
#panic = "abort"
