[package]
name = "dsh-builtin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsh-types = { path = "../dsh-types" }
dsh-frecency = { path = "../dsh-frecency" }
dsh-openai = { path = "../dsh-openai" }

anyhow.workspace = true
shellexpand.workspace = true
once_cell.workspace = true
dirs.workspace = true
tracing.workspace = true
uuid.workspace = true

getopts = "0.2.23"
regex = "1.11"