[package]
name = "dsh-builtin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsh-types = { path = "../dsh-types" }
dsh-frecency = { path = "../dsh-frecency" }
dsh-openai = { path = "../dsh-openai" }

anyhow.workspace = true
thiserror.workspace = true
shellexpand.workspace = true
once_cell.workspace = true
dirs.workspace = true
tracing.workspace = true
uuid.workspace = true
tabled.workspace = true
nix.workspace = true
skim.workspace = true
serde_json.workspace = true
xdg.workspace = true
serde.workspace = true

getopts = "0.2.23"
regex = "1.11"
shell-words = "1.1"
indicatif = "0.18"
toml = "0.9"
rmcp = { version = "0.10", features = ["client", "transport-child-process", "transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
pulldown-cmark = "0.13"

# HTTP server dependencies for serve command
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
mime_guess.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-util = "0.7"
httpdate = "1.0"

[dev-dependencies]
tempfile = "3.8"
