[package]
name = "dsh-chatgpt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cfg-if.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }