[package]
name = "dsh-frecency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
libc.workspace=true
nix.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cfg-if.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
xdg.workspace = true
bincode.workspace = true
