[package]
name = "dsh-frecency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
anyhow.version = "1"
libc.workspace=true
libc.version = "0.2"
nix.workspace = true
nix.version = "0.26"
tracing.workspace = true
tracing.version = "0.1"
tracing-subscriber.workspace = true
tracing-subscriber.version = "0.3"
tracing-subscriber.features = ["env-filter"]
cfg-if.workspace = true
serde.workspace = true
serde.version = "1.0"
serde.features = ["derive"]
serde_json.workspace = true
serde_json.version = "1.0"
crossterm.workspace = true
crossterm.version = "0"
crossterm.features = ["event-stream"]
xdg.workspace = true
bincode.workspace = true
