[package]
name = "dsh-frecency"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
cfg-if.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true

[dev-dependencies]
