[package]
name = "dsh-types"
description = "The simple shell"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
edition = "2021"
version = "0.0.1"

[dependencies]
anyhow.workspace = true
libc.workspace=true
nix.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cfg-if.workspace = true
uuid.workspace = true
