[package]
name = "dsh-wasm"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version="4", features = ["derive"] }
anyhow.workspace = true
xdg.workspace = true
wasmer = "3.1"
wasmer-compiler-cranelift = "3.1"
wasmer-wasi = "3.1"
tracing.workspace = true
tracing-subscriber.workspace = true
cfg-if.workspace = true
