[package]
name = "dsh-wasm"
description = "The simple shell"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
edition = "2021"
version = "0.0.1"

[dependencies]
clap = { version="4", features = ["derive"] }
anyhow.workspace = true
xdg.workspace = true
wasmer.workspace = true
wasmer-compiler-cranelift.workspace = true
wasmer-wasi.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cfg-if.workspace = true
