[package]
name = "doge-shell"
description = "The simple shell"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
edition = "2024"
version = "0.0.1"

[[bin]]
path = "src/main.rs"
name = "dsh"

[features]
default = ["i64", "f64"]
bigint = ["num-bigint"]
i128 = []
i64 = []
i32 = []
i16 = []
i8 = []
f64 = []
f32 = []


[dependencies]
dsh-types = { path = "../dsh-types" }
dsh-frecency = { path = "../dsh-frecency" }
dsh-builtin = { path = "../dsh-builtin" }
dsh-openai = { path = "../dsh-openai" }

anyhow.workspace = true
libc.workspace=true
nix.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cfg-if.workspace = true
serde.workspace = true
serde_json.workspace = true
console.workspace = true
crossterm.workspace = true
xdg.workspace = true
shellexpand.workspace = true
once_cell.workspace = true
dirs.workspace = true
tokio.workspace = true
futures.workspace = true
futures-timer.workspace = true
xid.workspace = true
parking_lot.workspace = true
skim.workspace = true
reqwest.workspace = true
uuid.workspace = true
unicode-width = "0.2"
async-trait = "0.1"
arboard = "3.4"

clap = { version="4", features = ["derive"] }
globmatch = "0.3"
regex = "1.11"
pulldown-cmark = "0.13"
csv = "1.3"

chrono = "0.4"
term_size = "0.3"
termion = "4"
termios = "0.3"
notify-rust = "4"
file-lock = "2"
notify = { version = "8", features = ["serde"] }
easy_reader = "0.5"
pest = "2.8"
pest_derive = "2.8"
fuzzy-matcher = "0.3"  # "*" → "0.3"
indexmap = { version = "2", features = ["serde"] }
tabled = "0.20"    # "*" → "0.20"
num-bigint = { version = "0.4", optional = true }
num-traits = "0.2"
rust-embed = "8.5"
rusqlite = { version = "0.38", features = ["bundled"] }
tempfile = "3.0"
which = "6.0"
wait-timeout = "0.2"
glob = "0.3"


[dev-dependencies]
